--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 	<dependencies>
 		<!-- ZK dependency -->
 		<dependency>
+			<groupId>org.zkoss.common</groupId>
+			<artifactId>zcommon</artifactId>
+			<version>${zk.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zkbind</artifactId>
 			<version>${zk.version}</version>
